# workshop-tools

./: .gitignore  .gitpod.yml  README.md  workshop.code-workspace
.devcontainer/: Dockerfile  devcontainer.json
conan-ciabatta/: conanfile.py
conan-ciabatta/test_package/: CMakeLists.txt  conanfile.py
echo/: CMakeLists.txt  CMakePresets.json  conanfile.py
echo-cli/: CMakeLists.txt  CMakePresets.json  LICENSE.md  conanfile.txt
echo-cli/cmake/: cmake_parse_arguments_helpers.cmake  unit_test_helpers.cmake  warnings.cmake
echo-cli/src/: CMakeLists.txt  echo_cli_config.h.in  main.cpp  server.cpp  server.h
echo-cli/src/build_info/: CMakeLists.txt  build_info.h  build_info_debug.cpp  build_info_release.cpp
echo-cli/test/: CMakeLists.txt  build_info_test.cpp
echo/cmake/: unit_test_helpers.cmake  warnings.cmake
echo/example/: CMakeLists.txt  server_mixin.cpp
echo/src/: CMakeLists.txt
echo/src/mixins/: CMakeLists.txt
echo/src/mixins/include/echo/: mixin_net_api.h
echo/src/mixins/include/echo/mixins/: null_receiver.h  null_sender.h  ostream_logger.h  stdout_logger.h
echo/src/protocol/: CMakeLists.txt
echo/src/protocol/include/echo/: messages_io.h
echo/src/server/: CMakeLists.txt  utils.h
echo/src/server/include/echo/: server.h
echo/test/: CMakeLists.txt  server_test.cpp
echo/test_package/: CMakeLists.txt  conanfile.py  test_package_protocol.cpp  test_package_server.cpp
googletest-1.8.1/: CMakeLists.txt
libciabatta-version-4/: CMakeLists.txt
